frontend/pc-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
<<<<<<< HEAD:frontend/proclone-frontend-svc.yaml
    name: pc-front
    labels:
        app: pc-front
spec:
    selector:
        app: pc-front
    ports:
        - port: 80
          targetPort: 80
    type: ClusterIP
=======
  name: pc-front
  labels:
    app: pc-front
spec:
  selector:
    app: pc-front
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
>>>>>>> b358ea8 (style: naming):frontend/pc-front-svc.yaml
