frontend/proclone-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: pc-front
    labels:
        app: pc-front
spec:
    selector:
        app: pc-front
    ports:
        - port: 80
          targetPort: 80
    type: ClusterIP
