frontend/pc-front-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
<<<<<<< HEAD:frontend/frontend-gateway.yaml
    name: pc-front-gateway
spec:
    selector:
        istio: ingressgateway
    servers:
        - port:
              number: 80
              name: http
              protocol: HTTP
          hosts:
              - "*"
=======
  name: pc-front-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
>>>>>>> b358ea8 (style: naming):frontend/pc-front-gateway.yaml
