frontend/pc-front-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
<<<<<<< HEAD:frontend/proclone-frontend-vsvc.yaml
    name: pc-front
spec:
    hosts:
        - "*"
    gateways:
        - pc-front-gateway
    http:
        - match:
              - uri:
                    prefix: "/"
          route:
              - destination:
                    host: pc-front
                    port:
                        number: 80
=======
  name: pc-front
spec:
  hosts:
  - "*"
  gateways:
  - pc-front-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: pc-front
        port:
          number: 80
>>>>>>> b358ea8 (style: naming):frontend/pc-front-vsvc.yaml
