frontend/proclone-frontend-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: pc-front
spec:
    hosts:
        - "*"
    gateways:
        - pc-front-gateway
    http:
        - match:
              - uri:
                    prefix: "/"
          route:
              - destination:
                    host: pc-front
                    port:
                        number: 80
